[metadata]
name = pypkg_tutorial
version = 0.0.1
author = yunfzhou
author_email = yunfzhou@zju.edu.cn
description = A tutorial for building a Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yunfzhou/pypkg_tutorial
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6